fix made to service container and body overflow-x

--- a/assets/css/scss/partials/_base.scss
+++ b/assets/css/scss/partials/_base.scss
@@ -5,7 +5,6 @@ body {
   font-family: $primarysans;
   color: $primarylight;
   background-color: $white;
-  overflow-x: hidden;
 }
 
 .section-title {
