--- a/assets/css/scss/partials/_navbar.scss
+++ b/assets/css/scss/partials/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-default {
-  background: #fff;
+  background: $white;
   z-index: 2;
   margin-bottom: 0;
 }
