--- a/assets/css/scss/partials/_services.scss
+++ b/assets/css/scss/partials/_services.scss
@@ -7,8 +7,6 @@
     border-bottom: 2px solid $black5;
   }
   .services-container {
-    padding-left: 0;
-    padding-right: 0;
     margin: 0;
   }
   .fa {
