--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,23 +5,22 @@ body {
   font-family: Raleway;
   color: #004883;
   background-color: white;
-  overflow-x: hidden;
 }
 
-/* line 11, scss/partials/_base.scss */
+/* line 10, scss/partials/_base.scss */
 .section-title {
   font-family: Raleway;
   padding-bottom: 30px;
   text-transform: uppercase;
 }
 
-/* line 17, scss/partials/_base.scss */
+/* line 16, scss/partials/_base.scss */
 .lead {
   font-size: 18px;
   font-weight: 200;
 }
 
-/* line 22, scss/partials/_base.scss */
+/* line 21, scss/partials/_base.scss */
 h2.section-title {
   font-size: 38px;
 }
@@ -233,7 +232,7 @@ h2.section-title {
 
 /* line 1, scss/partials/_navbar.scss */
 .navbar-default {
-  background: #fff;
+  background: white;
   z-index: 2;
   margin-bottom: 0;
 }
@@ -305,55 +304,53 @@ h2.section-title {
 }
 /* line 9, scss/partials/_services.scss */
 .services .services-container {
-  padding-left: 0;
-  padding-right: 0;
   margin: 0;
 }
-/* line 14, scss/partials/_services.scss */
+/* line 12, scss/partials/_services.scss */
 .services .fa {
   font-size: 4em;
 }
-/* line 17, scss/partials/_services.scss */
+/* line 15, scss/partials/_services.scss */
 .services .service-items {
   padding-left: 0;
 }
-/* line 19, scss/partials/_services.scss */
+/* line 17, scss/partials/_services.scss */
 .services .service-items .service-item {
   padding: 25px 15px;
   text-align: center;
 }
-/* line 23, scss/partials/_services.scss */
+/* line 21, scss/partials/_services.scss */
 .services .service-items .service-item h3 {
   padding-bottom: 10px;
 }
-/* line 26, scss/partials/_services.scss */
+/* line 24, scss/partials/_services.scss */
 .services .service-items .service-item p {
   font-size: 18px;
   line-height: 1em;
 }
 @media (min-width: 320px) {
-  /* line 30, scss/partials/_services.scss */
+  /* line 28, scss/partials/_services.scss */
   .services .service-items .service-item.pull-left {
     border-right: none;
     border-bottom: 2px solid #f1f1f2;
   }
 }
 @media (min-width: 768px) {
-  /* line 30, scss/partials/_services.scss */
+  /* line 28, scss/partials/_services.scss */
   .services .service-items .service-item.pull-left {
     border-right: 2px solid #f1f1f2;
     border-bottom: none;
   }
 }
 @media (min-width: 480px) {
-  /* line 40, scss/partials/_services.scss */
+  /* line 38, scss/partials/_services.scss */
   .services .service-items .service-item.pull-right {
     border-left: none;
     border-top: 2px solid #f1f1f2;
   }
 }
 @media (min-width: 768px) {
-  /* line 40, scss/partials/_services.scss */
+  /* line 38, scss/partials/_services.scss */
   .services .service-items .service-item.pull-right {
     border-left: 2px solid #f1f1f2;
     border-top: none;
